# TinyCInterpreter

./: CMakeLists.txt  README.md  TinyCInterpreter.cpp  TinyCInterpreter.h  main.cc  test.tcc
tcc-0.9.27/: config.mak  tcc  tcc.1
